--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Richard Moore <me@ricmoo.com>",
+  "author": "Richard Moore <me@ricmoo.com>, Dylan Duan <duanyytop@gmail.com>",
   "browser": {
     "./lib.esm/crypto/crypto.js": "./lib.esm/crypto/crypto-browser.js",
     "./lib.esm/providers/provider-ipcsocket.js": "./lib.esm/providers/provider-ipcsocket-browser.js",
@@ -21,12 +21,13 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "13.3.0",
     "@types/mocha": "9.1.1",
+    "@types/node": "^18.15.1",
     "@types/semver": "7.3.12",
     "c8": "7.12.0",
     "mocha": "10.0.0",
     "rollup": "2.78.1",
     "semver": "7.3.7",
-    "typescript": "4.9.5",
+    "typescript": "^4.9.5",
     "uglify-js": "3.17.0"
   },
   "engines": {
@@ -127,17 +128,17 @@
   "scripts": {
     "_build-dist": "rollup -c && uglifyjs ./dist/ethers.js -o ./dist/ethers.min.js && uglifyjs ./dist/ethers.umd.js -o ./dist/ethers.umd.min.js && uglifyjs ./dist/wordlists-extra.js -o ./dist/wordlists-extra.min.js && cp ./output/post-build/dist/* ./dist/",
     "_dist-stats": "gzip -k9f -S '.gz' ./dist/ethers.min.js && gzip -k9f -S '.gz' ./dist/ethers.umd.min.js && gzip -k9f -S '.gz' ./dist/wordlists-extra.min.js && du -hs ./dist/*.gz && echo '' && du -hs ./dist/*.js",
-    "auto-build": "npm run build -- -w",
+    "auto-build": "yarn build -- -w",
     "build": "tsc --project tsconfig.esm.json",
-    "build-all": "npm run build && cp ./output/post-build/lib.esm/* ./lib.esm/ && npm run build-commonjs && npm run build-types",
-    "build-clean": "npm run clean && npm run build && node lib.esm/_admin/update-version.js && node lib.esm/_admin/update-changelog.js && npm run build-all && npm run _build-dist && npm run _dist-stats",
+    "build-all": "yarn build && cp ./output/post-build/lib.esm/* ./lib.esm/ && yarn build-commonjs && yarn build-types",
+    "build-clean": "yarn clean && yarn build && node lib.esm/_admin/update-version.js && node lib.esm/_admin/update-changelog.js && yarn build-all && yarn _build-dist && yarn _dist-stats",
     "build-commonjs": "tsc --project tsconfig.commonjs.json && cp ./output/post-build/lib.commonjs/* ./lib.commonjs/",
-    "build-dist": "npm run build && npm run _build-dist && npm run _dist-stats",
+    "build-dist": "yarn build && yarn _build-dist && yarn _dist-stats",
     "build-docs": "echo 'foo'",
     "build-types": "tsc --project tsconfig.types.json && cp ./output/post-build/types/* ./types/",
     "clean": "rm -rf dist lib.esm lib.commonjs types",
     "stats": "echo 'Dependencies' && npm ls --all --omit=dev",
-    "test": "npm run test-esm",
+    "test": "yarn test-esm",
     "test-commonjs": "mocha --reporter ./reporter.cjs ./lib.commonjs/_tests/test-*.js",
     "test-coverage": "c8 -o output -r lcov -r text mocha --no-color --reporter ./reporter.cjs ./lib.esm/_tests/test-*.js | tee output/summary.txt",
     "test-esm": "mocha --reporter ./reporter.cjs ./lib.esm/_tests/test-*.js"
