--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -1,6 +1,6 @@
 {
   "exclude": [
-    "src.ts/_admin/**"
+    "src.ts/_admin/**",
   ],
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
