--- a/demo/package.json
+++ b/demo/package.json
@@ -11,7 +11,6 @@
     "access": "public"
   },
   "scripts": {
-    "build": "rm -rf lib && tsc",
     "format": "prettier --write .",
     "check": "prettier --check ."
   },
@@ -24,6 +23,7 @@
     "camelcase-keys": "^7.0.2",
     "convert-keys": "1.3.4",
     "elliptic": "^6.5.4",
+    "ethereumjs-tx": "^2.1.2",
     "fast-sha256": "^1.3.0",
     "js-sha3": "^0.8.0",
     "node-rsa": "^1.1.1",
