--- a/package.json
+++ b/package.json
@@ -106,7 +106,6 @@
       "url": "https://www.buymeacoffee.com/ricmoo"
     }
   ],
-  "gitHead": "5f2678fb059d643638b9cc1dc59cbfc61ce7a7b8",
   "homepage": "https://ethers.org",
   "keywords": [
     "ethereum",
@@ -123,7 +122,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ethers-io/ethers.js.git"
+    "url": "git://github.com/duanyytop/axon-ethers.js.git"
   },
   "scripts": {
     "_build-dist": "rollup -c && uglifyjs ./dist/ethers.js -o ./dist/ethers.min.js && uglifyjs ./dist/ethers.umd.js -o ./dist/ethers.umd.min.js && uglifyjs ./dist/wordlists-extra.js -o ./dist/wordlists-extra.min.js && cp ./output/post-build/dist/* ./dist/",
