--- a/demo/package.json
+++ b/demo/package.json
@@ -23,13 +23,15 @@
     "camelcase-keys": "^7.0.2",
     "convert-keys": "1.3.4",
     "elliptic": "^6.5.4",
-    "ethereumjs-tx": "^2.1.2",
     "fast-sha256": "^1.3.0",
     "js-sha3": "^0.8.0",
     "node-rsa": "^1.1.1",
-    "rlp": "^3.0.0"
+    "rlp": "^3.0.0",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "ethers": "^5.4.7",
     "prettier": "2.7.1"
   }
 }
